syntax = "proto3";

option java_multiple_files = true;
option java_package = "jp.broadcom.tanzu.mhoshi.social.analytics.proto";
option java_outer_classname = "DeleteMessagesProto";

service Delete {
  rpc DeleteMessages(DeleteRequest) returns (DeleteReply) {}
}

message DeleteRequest {
  repeated string ids = 1;
}

message DeleteReply {
  string message = 1;
}